--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 PyMuPDF==1.23.7
+sentence-transformers==2.2.2
+scikit-learn==1.2.2
 pandas==1.5.3
 numpy==1.24.4
-scikit-learn==1.2.2
-pytz==2023.3
-python-dateutil==2.8.2
